// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputCheckbox component should render correctly 1`] = `
<Fragment>
  <Styled(View)
    execOnChangeByDefault={true}
    id="checkbox"
    isChecked={false}
    onChange={[Function]}
    onClick={[MockFunction]}
    onStartShouldSetResponder={[Function]}
    pointerEvents="auto"
    val=""
  >
    <Styled(View)>
      <Styled(ImageComp)
        alt=""
        height="25px"
        host=""
        source={
          Object {
            "testUri": "../../../../core/src/assets/store-locator-checked.png",
          }
        }
        url=""
        width="25px"
      />
    </Styled(View)>
    <RenderTree
      componentMap={
        Object {
          "a": [Function],
          "body": [Function],
          "div": [Function],
          "head": [Function],
          "html": [Function],
          "img": [Function],
          "p": [Function],
          "span": [Function],
        }
      }
      tools={
        Object {
          "navigate": [Function],
        }
      }
      tree="<span>checkbox</span>"
    />
  </Styled(View)>
</Fragment>
`;

exports[`InputCheckbox component should render correctly with checked state false 1`] = `
<Fragment>
  <Styled(View)
    execOnChangeByDefault={true}
    id="checkbox"
    isChecked={false}
    onChange={[Function]}
    onClick={[MockFunction]}
    onStartShouldSetResponder={[Function]}
    pointerEvents="auto"
    val=""
  >
    <Styled(View)>
      <Styled(ImageComp)
        alt=""
        height="25px"
        host=""
        source={
          Object {
            "testUri": "../../../../core/src/assets/store-locator-check.png",
          }
        }
        url=""
        width="25px"
      />
    </Styled(View)>
    <RenderTree
      componentMap={
        Object {
          "a": [Function],
          "body": [Function],
          "div": [Function],
          "head": [Function],
          "html": [Function],
          "img": [Function],
          "p": [Function],
          "span": [Function],
        }
      }
      tools={
        Object {
          "navigate": [Function],
        }
      }
      tree="<span>checkbox</span>"
    />
  </Styled(View)>
</Fragment>
`;
